<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#80000000"
        android:gravity="center"
        android:text="@string/istatistik"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#80000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/oyunmoduText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oyunmodu"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tursayisiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tursayisi"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/kazananOyuncuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kazananoyuncu"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/enazpuanText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enazpuanalan"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOyunBitti"
        android:layout_marginTop="50dp"
        android:background="#89000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>