<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/siralamaImageView"
        android:layout_width="100dp"
        android:layout_height="match_parent"
 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/siralamaIsimText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/siralamaPuanText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puan"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/siralamaKazandigiElText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kazandigi_el_sayisi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/siralamaBattigiElText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battigi_el_sayisi"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>